v25.04/de/_sources/detection_modules.rst.txt
Detektions- und Messmodule

Der

rc_cube

 bietet Softwaremodule für unterschiedliche Detektions- und
Messanwendungen:

Measure (rc_measure, Abschnitt \ref{measure:sect-measure})  ermöglicht
die Messung von Tiefenwerten

LoadCarrier (rc_load_carrier, Abschnitt \ref{loadcarrier:sect-
loadcarrier})  ermöglicht die Erkennung von Load Carriern (Behältern)
und ihres Füllstands.

TagDetect (rc_april_tag_detect und rc_qr_code_detect, Abschnitt
\ref{tagdetect:sect-tag-detection})  ermöglicht die Erkennung von
AprilTags und QR-Codes sowie die Schätzung von deren Pose.

ItemPick and ItemPickAI (rc_itempick, Abschnitt \ref{itempick:sect-
itempick})  bietet eine Standardlösung für robotische Pick-and-Place-
Anwendungen für Objekte einer Objektkategorie oder unbekannte Objekte.

BoxPick (rc_boxpick, Abschnitt \ref{boxpick:sect-boxpick})  bietet
eine Standardlösung für robotische Pick-and-Place-Anwendungen für
Boxen oder texturierte Boxen.

SilhouetteMatch (rc_silhouettematch, Abschnitt \ref{silhouettematch
:sect-silhouettematch})  bietet eine Objekterkennungslösung für
Objekte, die sich auf einer Ebene befinden, oder gestapelte planare
Objekt.

CADMatch (rc_cadmatch, Abschnitt \ref{cadmatch:sect-cadmatch})  bietet
eine Objekterkennungslösung für 3D-Objekte.

Diese Softwaremodule sind pipelinespezifisch, was heißt, dass sie
innerhalb jeder Kamerapipeline laufen. Änderungen ihrer Einstellungen
oder Parameter gelten nur für die zugehörige Pipeline und haben keinen
Einfluss auf andere Kamerapipelines auf dem

rc_cube

.

Diese Module sind optional und können durch Kauf einer separaten

Lizenz

 aktiviert werden.

